# bank-of-dad

./: .gitignore  LICENSE  README.md  docker-compose.yml  manage.py  pyproject.toml
accounts/: models.py
accounts/migrations/: 0001_initial.py  0002_alter_transaction_transaction_type_interestscheme_and_more.py  0003_interestscheme_max_interest_amount.py
backend/: .docker.env  .env.example  Dockerfile  pyproject.toml
backend/accounts/: admin.py  models.py
backend/accounts/migrations/: 0001_initial.py  0004_alter_interestbreakpoint_options_and_more.py  0005_remove_account_upcoming_interest_and_more.py  0006_account_last_interest_accrued.py  0007_alter_account_accrued_interest.py
backend/bank_of_dad/: settings.py  wsgi.py
backend/users/migrations/: 0001_initial.py
bank_of_dad/: asgi.py  settings.py  urls.py
users/migrations/: 0001_initial.py
